Fix adaptive for header and hero sections, remove scrollbar for pixel perfect

--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -9,6 +9,13 @@ html {
   &.is-lock {
     overflow: hidden;
   }
+
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
