--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -60,9 +60,18 @@
       }
     }
 
+    @include mobile-above {
+      display: none;
+    }
+
     @include mobile {
       display: none;
     }
+
+    @include tablet-above {
+      display: block;
+    }
+
   }
 
   &__contact-us-link{
