--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -11,13 +11,18 @@
     row-gap: to-rem(49.5);
     text-align: center;
 
-    @include mobile-above {
-      padding-block: to-rem(118);
+    padding-block: fluid(118.5, 118);
+    @include tablet-s {
+      padding-block: fluid(118, 54.5);
     }
 
-    @include laptop-above {
-       padding-block: to-rem(118.5);
-     }
+    //@include mobile-above {
+    //  padding-block: to-rem(118);
+    //}
+    //
+    //@include laptop-above {
+    //   padding-block: to-rem(118.5);
+    // }
 
     @include mobile {
       padding-block: to-rem(54.5);
