--- a/src/scss/blocks/_section.scss
+++ b/src/scss/blocks/_section.scss
@@ -8,12 +8,7 @@
     margin-top: to-rem(75);
   }
 
-  &--review {
-    @include mobile {
-      margin-top: to-rem(77);
-    }
-  }
-
+  &--review,
   &--gallery {
     @include mobile {
       margin-top: to-rem(77);
